# TradingViewMCP

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/mcp_server/: constants.py  main.py
