[project]
name = "mcp_server"
version = "0.1.0"
description = ""
authors = [
    {name = "Varun G",email = "varungangu1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "mcp[cli] (>=1.9.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mcp_server", from = "src"}]


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
